server/deployment/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stunnel
  name: stunnel
spec:
  ports:
    - name: 5000-tcp
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: stunnel
  sessionAffinity: None
  type: ClusterIP
