server/deployment/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: stunnel
  name: stunnel
spec:
  port:
    targetPort: 5000-tcp
  tls:
    termination: passthrough
  to:
    kind: Service
    name: stunnel
    weight: 100
